After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723305 - gvfsd-trash assertion failed: (dir->monitor == NULL)
gvfsd-trash assertion failed: (dir->monitor == NULL)
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: trash backend
1.19.x
Other Linux
: Normal normal
: ---
Assigned To: Allison Karlitskaya (desrt)
gvfs-maint
: 725966 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-01-30 17:43 UTC by Sebastien Bacher
Modified: 2014-03-13 13:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2014-01-30 17:43:04 UTC
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/gvfs/+bug/1272679

Since the gvfs 1.19.2 -> 1.19.4 update, Ubuntu started received gvfsd-trash sigabrt reports

"#0  0xb77c4424 in __kernel_vsyscall ()
No symbol table info available.
  • #1 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 56
  • #2 __GI_abort
    at abort.c line 89
  • #3 g_assertion_message
  • #4 g_assertion_message_expr
    at /build/buildd/glib2.0-2.39.3/./glib/gtestutils.c line 2367
  • #5 trash_dir_watch
    at trashdir.c line 218
  • #6 trash_watcher_watch
    at trashwatcher.c line 297
  • #7 trash_backend_get_dir_monitor
    at gvfsbackendtrash.c line 80
  • #8 trash_backend_create_dir_monitor
    at gvfsbackendtrash.c line 777
  • #9 run
    at gvfsjobcreatemonitor.c line 156

Comment 1 Ross Lagerwall 2014-02-02 17:17:01 UTC
I have reverted 052682c8a22bf8d7c86fb0f086a119dd7fec4c6b (see bug 720589) as 01fe5a61c01a1b4ad24a2cb6a280183cc774de4b.

Hopefully the problem will go away. I'll leave this open for awhile. Please report if this still happens with the next version of gvfs that contains this fix.
Comment 2 Ross Lagerwall 2014-03-02 09:45:41 UTC
It's been a month, with no reported issues here. Closing...
Comment 3 André Klapper 2014-03-09 02:00:47 UTC
Bug 725966 has exactly the same stacktrace, except for (dir->monitor == NULL) being (dir->watch == NULL). Is it a dup?
Comment 4 Ondrej Holy 2014-03-13 13:52:24 UTC
*** Bug 725966 has been marked as a duplicate of this bug. ***