trash: Run blocking methods on a thread pool

All jobs use `_try` methods currently. This is wrong as most of them can
block. This works quite ok except the case of stale NFS mounts that can
block the main loop forever. Let's run the jobs on a thread pool instead.
This reverts commit 01fe5a61 except for the `create_dir_monitor` and
`create_file_monitor` methods in order to avoid issues like
https://bugzilla.gnome.org/show_bug.cgi?id=723305.